<resources>
    <string name="app_name">LAB_WEEK_03</string>

    <string name="affogato_title">AFFOGATO</string>
    <string name="americano_title">AMERICANO</string>
    <string name="latte_title">CAFFE LATTE</string>
    <string name="capp_title">CAPPUCCINO</string>
    <string name="mocha_title">MOCHA</string>
    <string name="mac_title">MACCHIATO</string>
    <string name="flatwhite_title">FLAT WHITE</string>
    <string name="ristretto_title">RISTRETTO</string>

    <string name="affogato_desc">Espresso on vanilla ice cream.</string>
    <string name="americano_desc">Espresso with hot water.</string>
    <string name="latte_desc">Espresso with steamed milk.</string>
    <string name="capp_desc">Espresso, milk, foam.</string>
    <string name="mocha_desc">Espresso + chocolate + milk.</string>
    <string name="mac_desc">Espresso with foam mark.</string>
    <string name="flatwhite_desc">Microfoam over espresso.</string>
    <string name="ristretto_desc">Short concentrated shot.</string>
    <string name="back">Back</string>
</resources>
