<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="20dp">

        <TextView android:id="@+id/affogato"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/affogato_title" android:padding="10dp"/>

        <TextView android:id="@+id/americano"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/americano_title" android:padding="10dp"/>

        <TextView android:id="@+id/latte"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/latte_title" android:padding="10dp"/>

        <TextView android:id="@+id/capp"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/capp_title" android:padding="10dp"/>

        <TextView android:id="@+id/mocha"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/mocha_title" android:padding="10dp"/>

        <TextView android:id="@+id/mac"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/mac_title" android:padding="10dp"/>

        <TextView android:id="@+id/flatwhite"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/flatwhite_title" android:padding="10dp"/>

        <TextView android:id="@+id/ristretto"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/ristretto_title" android:padding="10dp"/>
    </LinearLayout>
</ScrollView>
